# Hackdecomp

./: README.md  pyproject.toml
src/hackdecomp/: __main__.py
